<resources>
    <string name="app_name" translatable="false">Flashlight</string>
    <string name="power_flashlight" translatable="false">POWER FLASHLIGHT</string>
    <string name="rate">Rate</string>
    <string name="morse">Morse</string>
    <string name="help">Help</string>
    <string name="share">Share</string>
    <string name="setting">Setting</string>
    <string name="settings">Settings</string>
    <string name="sound_of_toggle">Sound of Toggle</string>
    <string name="status_bar">Status Bar</string>
    <string name="language">Language</string>
    <string name="privacy">Privacy</string>
    <string name="version">Version</string>
    <string name="compass">Compass</string>
    <string name="numberofDegree">Orientation</string>
    <string name="DirNorth">North</string>
    <string name="DirNorthNorthEast">North - North East</string>
    <string name="DirNorthEast">North East</string>
    <string name="DirEastNorthEast">East - North East</string>
    <string name="DirEast">East</string>
    <string name="DirEastSouthEast">East - South East</string>
    <string name="DirSouthEast">East South</string>
    <string name="DirSouthSouthEast">South - South East</string>
    <string name="DirSouth">South</string>
    <string name="DirSouthSouthWest">South - South West</string>
    <string name="DirSouthWest">West - South</string>
    <string name="DirWestSouthWest">West - South West</string>
    <string name="DirWest">West</string>
    <string name="DirWestNorthWest">West - North West</string>
    <string name="DirNorthwest">West north</string>
    <string name="DirNorthNorthWest">North - North West</string>
    <string name="failed_camera">Failed to connect to Camera service</string>
    <string name="not_support">Your device not support Flash !</string>
    <string name="warning_request_permission">You need to apply access to Camera to use Flashlight</string>
    <string name="home">Home</string>
    <string name="flashlight">Flashlight</string>
    <string name="wifi">Wifi</string>
    <string name="data">Data</string>
    <string name="share_message">I am using %1$s. It is so helpful and FREE! Try it at: %2$s</string>
    <string name="get">GET</string>
    <string name="option">Option</string>
    <string name="text_up_to_premium">Upgrade to Premium Version</string>
    <string name="text_watch_video">Watch the ad to try it once</string>
    <string name="text_flashlight">FLASHLIGHT</string>
    <string name="text_flashlight_normal">Flashlight</string>
    <string name="free">FREE</string>
    <string name="text_compass">COMPASS</string>
    <string name="text_compass_normal">Compass</string>
    <string name="premium">PREMIUM</string>
    <string name="power_flashlight_premium" translatable="false">Power Flashlight</string>
    <string name="most_popular">MOST POPULAR</string>
    <string name="monthly_plan">MONTHLY PLAN</string>
    <string name="start_3_day_trial">Start today with 3 day free trial</string>
    <string name="yearly_plan">ANNUAL PLAN</string>
    <string name="trail_3_day">3 day free trial</string>
    <string name="cancel_anytime">Cancel Anytime</string>
    <string name="restore_purchases">Restore Purchases</string>
    <string name="text_continue">CONTINUE</string>
    <string name="some_error">Some error</string>
    <string name="save">Save</string>
    <string name="auto">Default</string>
    <string name="text_buy_month_content">after trial ends, auto renews at %1$s per month</string>
    <string name="text_buy_year_content">after trial ends, auto renews at %1$s billed yearly</string>
    <string name="text_limited_time">Limited time offer ends in %1$s hours %2$s min %3$s secs</string>
    <string name="loading_ads_dialog">Loading ad</string>
    <string name="text_new_ver_title">New version is available!</string>
    <string name="text_update_mess">A new version of this app is available. Please update it.</string>
    <string name="text_update">Update</string>
    <string name="option_cancel">Cancel</string>
    <string name="Downloading">Downloading</string>
    <string name="text_yes">Yes</string>
    <string name="text_exit_app_title">Do you want to exit app?</string>
    <string name="morse_code">Morse Code</string>
    <string name="message">Your Text</string>
    <string name="enter_your_text">Enter your message</string>
    <string name="morse_text">Morse text</string>
    <string name="start">Start Convert</string>
    <string name="stop">Stop Convert</string>
    <string name="reset">Reset</string>
    <string name="flash_flicker">Flash Flicker</string>
    <string name="text_downloading">Downloading...</string>
    <string name="default_notification_channel_id" translatable="false">notification_flashlight</string>
</resources>
