<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llBotOption"
    android:layout_width="match_parent"
    android:layout_height="56dp"
    android:layout_gravity="bottom"
    android:background="#25282F"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/llHome"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_weight="1"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imHome"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_home" />

        <TextView
            android:id="@+id/tvHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/home"
            android:textSize="10sp"
            android:textColor="#9D9D9D" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llMorse"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_weight="1"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:gravity="center"
        android:orientation="vertical"
        >

        <ImageView
            android:id="@+id/imMorse"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_selected_morse" />

        <TextView
            android:id="@+id/tvMorse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/morse"
            android:textSize="10sp"
            android:textColor="#9D9D9D" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llHelp"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_weight="1"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imHelp"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_selected_help" />

        <TextView
            android:id="@+id/tvHelp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/help"
            android:textSize="10sp"
            android:textColor="#9D9D9D" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llCompass"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_weight="1"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imCompass"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_selected_compass" />

        <TextView
            android:id="@+id/tvCompass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/compass"
            android:textSize="10sp"
            android:textColor="#9D9D9D" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llSetting"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_weight="1"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imSetting"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_selected_setting" />

        <TextView
            android:id="@+id/tvSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/setting"
            android:textSize="10sp"
            android:textColor="#9D9D9D" />

    </LinearLayout>

</LinearLayout>