<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/color_white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/option"
            android:textColor="#3A3C4E"
            android:textSize="18sp"
            android:layout_margin="@dimen/margin_base"/>

        <ImageView
            android:id="@+id/imCloseDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close_black"
            android:padding="@dimen/padding_base"
            android:background="?attr/selectableItemBackground"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tvUpToPro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_base"
        android:layout_marginTop="@dimen/margin_very_large"
        android:layout_marginEnd="@dimen/margin_base"
        android:background="@drawable/bg_bottom_sheet_white"
        android:fontFamily="@font/roboto_medium"
        android:textColor="@color/color_black"
        android:textSize="16sp"
        android:padding="@dimen/padding_small"
        android:gravity="center"
        android:text="@string/text_up_to_premium"/>



        <TextView
            android:id="@+id/tvWatchVideo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/color_black"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_margin="@dimen/margin_base"
            android:padding="@dimen/padding_small"
            android:background="@drawable/bg_bottom_sheet_yellow"
            android:text="@string/text_watch_video"/>

<!--    </RelativeLayout>-->

</LinearLayout>